# AI-Engineer

./: test_claude.py
.claude/: settings.local.json
AI Agent & RAG/: .env.example  main.py  requirements.txt
AI Agent & RAG/agents/: multi_agent.py  react_agent.py  tool_calling_agent.py
AI Agent & RAG/config/: prompts.py  settings.py
AI Agent & RAG/memory/: episodic.py  long_term.py  short_term.py
AI Agent & RAG/pipelines/: agent_pipeline.py  evaluation.py  rag_pipeline.py
AI Agent & RAG/rag/: document_loader.py  embeddings.py  reranker.py  retriever.py  text_splitter.py  vector_store.py
AI Agent & RAG/tests/: test_agents.py  test_rag.py  test_tools.py
AI Agent & RAG/tools/: calculator_tool.py  file_tool.py  search_tool.py  sql_tool.py
LLM & Generative AI/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
LLM & Generative AI/src/: __init__.py  config.py  logger.py
LLM & Generative AI/src/agent/: __init__.py  base.py  factory.py  tools.py
LLM & Generative AI/src/chains/: __init__.py  base.py
LLM & Generative AI/src/llm/: __init__.py  anthropic.py  base.py  factory.py  mock.py  openai.py
LLM & Generative AI/src/prompts/: __init__.py  templates.py
LLM & Generative AI/src/rag/: __init__.py  chunking.py  embedding.py  pipeline.py  vector_db.py
LLM & Generative AI/tests/: test_agent.py  test_llm.py  test_rag.py
Machine Learning/: main.py  requirements.txt
Machine Learning/data/: dataset.csv
Platform Python/: exception_demo.py  file_io.py  main.py  math_utils.py  oop_student.py
(+11 files in other folders)
